; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/cardreader/extr_rts5227.c_rts5227_switch_output_voltage.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/cardreader/extr_rts5227.c_rts5227_switch_output_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtsx_pcr = type { i32 }

@OUTPUT_3V3 = common dso_local global i32 0, align 4
@OUTPUT_1V8 = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtsx_pcr*, i32)* @rts5227_switch_output_voltage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rts5227_switch_output_voltage(%struct.rtsx_pcr* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rtsx_pcr*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.rtsx_pcr* %0, %struct.rtsx_pcr** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @OUTPUT_3V3, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %12 = call i32 @rtsx_pci_write_phy_register(%struct.rtsx_pcr* %11, i32 8, i32 20452)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i32, i32* %6, align 4
  store i32 %16, i32* %3, align 4
  br label %49

17:                                               ; preds = %10
  br label %41

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @OUTPUT_1V8, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %37

22:                                               ; preds = %18
  %23 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %24 = call i32 @rtsx_pci_write_phy_register(%struct.rtsx_pcr* %23, i32 17, i32 15362)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* %6, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %49

29:                                               ; preds = %22
  %30 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %31 = call i32 @rtsx_pci_write_phy_register(%struct.rtsx_pcr* %30, i32 8, i32 19620)
  store i32 %31, i32* %6, align 4
  %32 = load i32, i32* %6, align 4
  %33 = icmp slt i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i32, i32* %6, align 4
  store i32 %35, i32* %3, align 4
  br label %49

36:                                               ; preds = %29
  br label %40

37:                                               ; preds = %18
  %38 = load i32, i32* @EINVAL, align 4
  %39 = sub nsw i32 0, %38
  store i32 %39, i32* %3, align 4
  br label %49

40:                                               ; preds = %36
  br label %41

41:                                               ; preds = %40, %17
  %42 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %43 = call i32 @rtsx_pci_init_cmd(%struct.rtsx_pcr* %42)
  %44 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %45 = load i32, i32* %5, align 4
  %46 = call i32 @rts5227_fill_driving(%struct.rtsx_pcr* %44, i32 %45)
  %47 = load %struct.rtsx_pcr*, %struct.rtsx_pcr** %4, align 8
  %48 = call i32 @rtsx_pci_send_cmd(%struct.rtsx_pcr* %47, i32 100)
  store i32 %48, i32* %3, align 4
  br label %49

49:                                               ; preds = %41, %37, %34, %27, %15
  %50 = load i32, i32* %3, align 4
  ret i32 %50
}

declare dso_local i32 @rtsx_pci_write_phy_register(%struct.rtsx_pcr*, i32, i32) #1

declare dso_local i32 @rtsx_pci_init_cmd(%struct.rtsx_pcr*) #1

declare dso_local i32 @rts5227_fill_driving(%struct.rtsx_pcr*, i32) #1

declare dso_local i32 @rtsx_pci_send_cmd(%struct.rtsx_pcr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
